--- a/src/components/Items.module.scss
+++ b/src/components/Items.module.scss
@@ -7,7 +7,7 @@
 
    h1 {
       color: #FFFFFF;
-      margin: 92px 0 71px 14px;
+      margin: 93px 0 71px 14px;
       @include text-styles(20px, 500, -8px);
    }
 }
