--- a/src/components/Slider.module.scss
+++ b/src/components/Slider.module.scss
@@ -22,7 +22,7 @@ body {
 
 
 .sliderWrapper {
-   margin: 127px 0 0 0;
+   margin: 126px 0 0 0;
    border-radius: 24.44px;
    background-color: #222222;
    padding-left: 37px;
